# bulk-cli

./: .gitignore  README.md  pyproject.toml
bulk_cli/: command.py  help.py  init.py  install.py  main.py  run.py  uninstall.py
bulk_cli/configs/: default.json  help.txt
